--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<version>3.23.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit5</artifactId>
+			<version>0.14.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
